Renamed MercenaryGuild to NormalHouse. All the references to it being a Mercenary Guild refers to MM6, which means that the enum probably got changed. There was already a lot of TODOS to make the change so I did it.

--- a/src/GUI/UI/Houses/CMakeLists.txt
+++ b/src/GUI/UI/Houses/CMakeLists.txt
@@ -9,7 +9,7 @@ set(GUI_UI_HOUSES_SOURCES
         Jail.cpp
         MagicGuild.cpp
         TownHall.cpp
-        MercenaryGuild.cpp
+        NormalHouse.cpp
         Shops.cpp)
 
 set(GUI_UI_HOUSES_HEADERS
@@ -21,7 +21,7 @@ set(GUI_UI_HOUSES_HEADERS
         Jail.h
         MagicGuild.h
         TownHall.h
-        MercenaryGuild.h
+        NormalHouse.h
         Shops.h)
 
 add_library(gui_ui_houses STATIC ${GUI_UI_HOUSES_SOURCES} ${GUI_UI_HOUSES_HEADERS})
